// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment displays image attachments 1`] = `
<div
  data-stylename="commentContainer"
>
  <div
    data-stylename="header"
  >
    <Avatar
      avatarUrl="foo.jpg"
      data-stylename="avatar"
      url="/groups/foo/members/1"
    />
    <Link
      data-stylename="userName"
      to="/groups/foo/members/1"
    >
      Joe Smith
    </Link>
    <span
      data-stylename="timestamp"
    >
      just now
    </span>
    <div
      data-stylename="upperRight"
    >
      <div
        data-stylename="commentActions"
      >
        <div
          data-for="reply-tip-undefined"
          data-stylename="commentAction"
          data-tip="Reply"
          onClick={[MockFunction]}
        >
          <Icon
            name="Replies"
          />
        </div>
        <EmojiRow
          className="undefined"
          currentUser={
            Object {
              "id": 2,
            }
          }
        />
      </div>
    </div>
  </div>
  <div>
    <CardImageAttachments
      attachments={
        Array [
          Object {
            "attachmentType": "image",
            "url": "foo.png",
          },
        ]
      }
      data-stylename="images"
      linked={true}
    />
    <CardFileAttachments
      attachments={
        Array [
          Object {
            "attachmentType": "image",
            "url": "foo.png",
          },
        ]
      }
      data-stylename="files"
    />
  </div>
  <ClickCatcher
    groupSlug="foo"
  >
    <ForwardRef(HyloEditor)
      contentHTML="<p>text of the comment</p>"
      data-stylename="text"
      onEnter={[Function]}
      onEscape={[Function]}
      readOnly={true}
    />
    <EmojiRow
      className="undefined"
      currentUser={
        Object {
          "id": 2,
        }
      }
    />
  </ClickCatcher>
</div>
`;

exports[`Comment displays the delete menu when deleteComment is defined 1`] = `
<div
  data-stylename="commentContainer"
>
  <div
    data-stylename="header"
  >
    <Avatar
      avatarUrl="foo.jpg"
      data-stylename="avatar"
      url="/groups/foo/members/1"
    />
    <Link
      data-stylename="userName"
      to="/groups/foo/members/1"
    >
      Joe Smith
    </Link>
    <span
      data-stylename="timestamp"
    >
      just now
    </span>
    <div
      data-stylename="upperRight"
    >
      <div
        data-stylename="commentActions"
      >
        <div
          data-for="reply-tip-undefined"
          data-stylename="commentAction"
          data-tip="Reply"
          onClick={[MockFunction]}
        >
          <Icon
            name="Replies"
          />
        </div>
        <EmojiRow
          className="undefined"
          currentUser={
            Object {
              "id": 1,
            }
          }
        />
        <div
          data-stylename="commentAction"
          key="Edit"
          onClick={[Function]}
        >
          <Icon
            name="Edit"
          />
        </div>
        <div
          data-stylename="commentAction"
          key="Trash"
          onClick={[Function]}
        >
          <Icon
            name="Trash"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <CardImageAttachments
      attachments={Array []}
      data-stylename="images"
      linked={true}
    />
    <CardFileAttachments
      attachments={Array []}
      data-stylename="files"
    />
  </div>
  <ClickCatcher
    groupSlug="foo"
  >
    <ForwardRef(HyloEditor)
      contentHTML="<p>text of the comment</p>"
      data-stylename="text"
      onEnter={[Function]}
      onEscape={[Function]}
      readOnly={true}
    />
    <EmojiRow
      className="undefined"
      currentUser={
        Object {
          "id": 1,
        }
      }
    />
  </ClickCatcher>
</div>
`;

exports[`Comment displays the remove menu when removeComment is defined 1`] = `
<div
  data-stylename="commentContainer"
>
  <div
    data-stylename="header"
  >
    <Avatar
      avatarUrl="foo.jpg"
      data-stylename="avatar"
      url="/groups/foo/members/1"
    />
    <Link
      data-stylename="userName"
      to="/groups/foo/members/1"
    >
      Joe Smith
    </Link>
    <span
      data-stylename="timestamp"
    >
      just now
    </span>
    <div
      data-stylename="upperRight"
    >
      <div
        data-stylename="commentActions"
      >
        <div
          data-for="reply-tip-undefined"
          data-stylename="commentAction"
          data-tip="Reply"
          onClick={[MockFunction]}
        >
          <Icon
            name="Replies"
          />
        </div>
        <EmojiRow
          className="undefined"
          currentUser={
            Object {
              "id": 2,
            }
          }
        />
        <div
          data-stylename="commentAction"
          key="Trash"
          onClick={[Function]}
        >
          <Icon
            name="Trash"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <CardImageAttachments
      attachments={Array []}
      data-stylename="images"
      linked={true}
    />
    <CardFileAttachments
      attachments={Array []}
      data-stylename="files"
    />
  </div>
  <ClickCatcher
    groupSlug="foo"
  >
    <ForwardRef(HyloEditor)
      contentHTML="<p>text of the comment</p>"
      data-stylename="text"
      onEnter={[Function]}
      onEscape={[Function]}
      readOnly={true}
    />
    <EmojiRow
      className="undefined"
      currentUser={
        Object {
          "id": 2,
        }
      }
    />
  </ClickCatcher>
</div>
`;

exports[`Comment does not display the delete menu when deleteComment is not defined 1`] = `
<div
  data-stylename="commentContainer"
>
  <div
    data-stylename="header"
  >
    <Avatar
      avatarUrl="foo.jpg"
      data-stylename="avatar"
      url="/groups/foo/members/1"
    />
    <Link
      data-stylename="userName"
      to="/groups/foo/members/1"
    >
      Joe Smith
    </Link>
    <span
      data-stylename="timestamp"
    >
      just now
    </span>
    <div
      data-stylename="upperRight"
    >
      <div
        data-stylename="commentActions"
      >
        <div
          data-for="reply-tip-undefined"
          data-stylename="commentAction"
          data-tip="Reply"
          onClick={[MockFunction]}
        >
          <Icon
            name="Replies"
          />
        </div>
        <EmojiRow
          className="undefined"
          currentUser={
            Object {
              "id": 2,
            }
          }
        />
      </div>
    </div>
  </div>
  <div>
    <CardImageAttachments
      attachments={Array []}
      data-stylename="images"
      linked={true}
    />
    <CardFileAttachments
      attachments={Array []}
      data-stylename="files"
    />
  </div>
  <ClickCatcher
    groupSlug="foo"
  >
    <ForwardRef(HyloEditor)
      contentHTML="<p>text of the comment</p>"
      data-stylename="text"
      onEnter={[Function]}
      onEscape={[Function]}
      readOnly={true}
    />
    <EmojiRow
      className="undefined"
      currentUser={
        Object {
          "id": 2,
        }
      }
    />
  </ClickCatcher>
</div>
`;

exports[`Comment does not display the remove menu when removeComment is not defined 1`] = `
<div
  data-stylename="commentContainer"
>
  <div
    data-stylename="header"
  >
    <Avatar
      avatarUrl="foo.jpg"
      data-stylename="avatar"
      url="/groups/foo/members/1"
    />
    <Link
      data-stylename="userName"
      to="/groups/foo/members/1"
    >
      Joe Smith
    </Link>
    <span
      data-stylename="timestamp"
    >
      just now
    </span>
    <div
      data-stylename="upperRight"
    >
      <div
        data-stylename="commentActions"
      >
        <div
          data-for="reply-tip-undefined"
          data-stylename="commentAction"
          data-tip="Reply"
          onClick={[MockFunction]}
        >
          <Icon
            name="Replies"
          />
        </div>
        <EmojiRow
          className="undefined"
          currentUser={
            Object {
              "id": 1,
            }
          }
        />
        <div
          data-stylename="commentAction"
          key="Edit"
          onClick={[Function]}
        >
          <Icon
            name="Edit"
          />
        </div>
        <div
          data-stylename="commentAction"
          key="Trash"
          onClick={[Function]}
        >
          <Icon
            name="Trash"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <CardImageAttachments
      attachments={Array []}
      data-stylename="images"
      linked={true}
    />
    <CardFileAttachments
      attachments={Array []}
      data-stylename="files"
    />
  </div>
  <ClickCatcher
    groupSlug="foo"
  >
    <ForwardRef(HyloEditor)
      contentHTML="<p>text of the comment</p>"
      data-stylename="text"
      onEnter={[Function]}
      onEscape={[Function]}
      readOnly={true}
    />
    <EmojiRow
      className="undefined"
      currentUser={
        Object {
          "id": 1,
        }
      }
    />
  </ClickCatcher>
</div>
`;

exports[`Comment renders correctly 1`] = `
<div
  data-stylename="commentContainer"
>
  <div
    data-stylename="header"
  >
    <Avatar
      avatarUrl="foo.jpg"
      data-stylename="avatar"
      url="/groups/foo/members/1"
    />
    <Link
      data-stylename="userName"
      to="/groups/foo/members/1"
    >
      Joe Smith
    </Link>
    <span
      data-stylename="timestamp"
    >
      just now
    </span>
    <div
      data-stylename="upperRight"
    >
      <div
        data-stylename="commentActions"
      >
        <div
          data-for="reply-tip-undefined"
          data-stylename="commentAction"
          data-tip="Reply"
          onClick={[MockFunction]}
        >
          <Icon
            name="Replies"
          />
        </div>
        <EmojiRow
          className="undefined"
          currentUser={
            Object {
              "id": 2,
            }
          }
        />
      </div>
    </div>
  </div>
  <div>
    <CardImageAttachments
      attachments={Array []}
      data-stylename="images"
      linked={true}
    />
    <CardFileAttachments
      attachments={Array []}
      data-stylename="files"
    />
  </div>
  <ClickCatcher
    groupSlug="foo"
  >
    <ForwardRef(HyloEditor)
      contentHTML="<p>text of the comment</p>"
      data-stylename="text"
      onEnter={[Function]}
      onEscape={[Function]}
      readOnly={true}
    />
    <EmojiRow
      className="undefined"
      currentUser={
        Object {
          "id": 2,
        }
      }
    />
  </ClickCatcher>
</div>
`;

exports[`Comment renders correctly when editing 1`] = `
<div
  data-stylename="commentContainer"
>
  <div
    data-stylename="header"
  >
    <Avatar
      avatarUrl="foo.jpg"
      data-stylename="avatar"
      url="/groups/foo/members/1"
    />
    <Link
      data-stylename="userName"
      to="/groups/foo/members/1"
    >
      Joe Smith
    </Link>
    <span
      data-stylename="timestamp"
    >
      Editing now
    </span>
    <div
      data-stylename="upperRight"
    >
      <Icon
        data-stylename="cancelIcon"
        name="Ex"
        onClick={[Function]}
      />
      <div
        data-stylename="commentActions"
      >
        <div
          data-for="reply-tip-undefined"
          data-stylename="commentAction"
          data-tip="Reply"
          onClick={[MockFunction]}
        >
          <Icon
            name="Replies"
          />
        </div>
        <EmojiRow
          className="undefined"
          currentUser={
            Object {
              "id": 2,
            }
          }
        />
      </div>
    </div>
  </div>
  <div>
    <CardImageAttachments
      attachments={Array []}
      data-stylename="images"
      linked={true}
    />
    <CardFileAttachments
      attachments={Array []}
      data-stylename="files"
    />
  </div>
  <ClickCatcher
    groupSlug="foo"
  >
    <ForwardRef(HyloEditor)
      contentHTML="<p>text of the comment</p>"
      data-stylename="editing"
      onEnter={[Function]}
      onEscape={[Function]}
      readOnly={false}
    />
  </ClickCatcher>
</div>
`;
